# GENESIS-CUDA

./: .gitignore  CMakeLists.txt  README.md
config/: default_config.toml  scenario_continent.toml  scenario_extinction.toml  scenario_island.toml  scenario_ocean_world.toml  scenario_pandemic.toml  scenario_radiation.toml
shaders/: atmosphere.frag  creature_instanced.frag  creature_instanced.vert  fluid_screen_space.frag  fluid_screen_space.vert  heatmap_overlay.frag  heatmap_overlay.vert  post_process.frag  terrain.frag  terrain.vert
src/: main.cu
src/analytics/: analytics_common.cu  analytics_common.cuh  analytics_manager.cu  analytics_manager.cuh  data_exporter.cu  data_exporter.cuh  diversity_index.cu  diversity_index.cuh  heatmap_generator.cu  heatmap_generator.cuh  histogram_kernel.cu  histogram_kernel.cuh  parallel_statistics.cu  parallel_statistics.cuh  phylo_visualizer.cu  phylo_visualizer.cuh
src/benchmark/: benchmark_suite.cu  benchmark_suite.cuh
src/checkpoint/: checkpoint_system.cu  checkpoint_system.cuh
src/climate/: climate_common.cuh  climate_manager.cu  climate_manager.cuh  heat_diffusion.cu  heat_diffusion.cuh  humidity_transport.cu  humidity_transport.cuh  precipitation.cu  precipitation.cuh  seasonal_cycle.cu  seasonal_cycle.cuh  solar_model.cu  solar_model.cuh  wind_simulation.cu  wind_simulation.cuh
src/core/: config_manager.cpp  config_manager.h  constants.cuh  cuda_graphs.cu  cuda_graphs.cuh  cuda_utils.cuh  gpu_info.cu  gpu_info.cuh  gpu_memory_pool.cu  gpu_memory_pool.cuh  kernel_profiler.cu  kernel_profiler.cuh  memory_optimizer.cu  memory_optimizer.cuh  stream_manager.cu  stream_manager.cuh
src/creatures/: creature_common.cu  creature_common.cuh  creature_interaction.cu  creature_interaction.cuh  creature_lifecycle.cu  creature_lifecycle.cuh  creature_manager.cu  creature_manager.cuh  creature_movement.cu  creature_movement.cuh  creature_renderer.cu  creature_renderer.cuh  creature_spawner.cu  creature_spawner.cuh  stream_compaction.cu  stream_compaction.cuh
src/ecosystem/: disease_model.cu  disease_model.cuh  ecosystem_common.cu  ecosystem_common.cuh  ecosystem_manager.cu  ecosystem_manager.cuh  food_web.cu  food_web.cuh  population_control.cu  population_control.cuh  resource_manager.cu  resource_manager.cuh
src/fluid/: fluid_manager.cu  fluid_manager.cuh  fluid_renderer.cu  fluid_renderer.cuh  fluid_terrain_coupling.cu  fluid_terrain_coupling.cuh  sph_boundary.cu  sph_boundary.cuh  sph_density.cu  sph_density.cuh  sph_forces.cu  sph_forces.cuh  sph_integration.cu  sph_integration.cuh  sph_kernels.cuh
src/genetics/: crossover_kernels.cu  crossover_kernels.cuh  curand_states.cu  curand_states.cuh  fitness_evaluation.cu  fitness_evaluation.cuh  genetic_manager.cu  genetic_manager.cuh  genome.cu  genome.cuh  mutation_kernels.cu  mutation_kernels.cuh  phylogenetic_tree.cu  phylogenetic_tree.cuh  speciation.cu  speciation.cuh
src/multi_gpu/: halo_exchange.cu  halo_exchange.cuh  load_balancer.cu  load_balancer.cuh  multi_gpu_manager.cu  multi_gpu_manager.cuh
src/neural/: activation_functions.cuh  decision_extractor.cu  decision_extractor.cuh  genome_to_weights.cu  genome_to_weights.cuh  neural_common.cuh  neural_forward.cu  neural_forward.cuh  neural_manager.cu  neural_manager.cuh  sensory_input.cu  sensory_input.cuh
src/rendering/: atmosphere_renderer.cu  atmosphere_renderer.cuh  camera_controller.cpp  camera_controller.h  cloud_raymarcher.cu  cloud_raymarcher.cuh  day_night_cycle.cu  day_night_cycle.cuh  imgui_dashboard.cpp  imgui_dashboard.h  post_processing.cu  post_processing.cuh  render_common.cu  render_common.cuh  render_manager.cu  render_manager.cuh
src/scenario/: scenario_loader.cpp  scenario_loader.h
src/spatial/: neighbor_search.cu  neighbor_search.cuh  sort_particles.cu  sort_particles.cuh  spatial_hash.cu  spatial_hash.cuh
src/terrain/: biome_classifier.cu  biome_classifier.cuh  hydraulic_erosion.cu  hydraulic_erosion.cuh  perlin_noise.cu  perlin_noise.cuh  terrain_generator.cu  terrain_generator.cuh  terrain_normals.cu  terrain_normals.cuh  terrain_renderer.cu  terrain_renderer.cuh  thermal_erosion.cu  thermal_erosion.cuh
tests/: test_analytics.cu  test_climate.cu  test_ecosystem.cu  test_genetics.cu  test_neural.cu  test_spatial_hash.cu  test_sph.cu
